# func_cli

./: pyproject.toml
functions/: func.json
src/func/: __init__.py  cli.py  init.py
src/func/templates/: example.py
src/func/utils/: cli_utils.py  init.py
src/utils/: register.py
tests/: test.py
