[project]
name = "func"
version = "0.1.0"
description = ""
authors = [
    {name = "wenxijiao",email = "vincentjiao.dream@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer[all] (>=0.15.4,<0.16.0)"
]

[tool.poetry]
packages = [{include = "func", from = "src"}]

[tool.poetry.scripts]
func = "func.cli:cli"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
